gcc/algol60/testsuite/fail/types2.a60
'begin'
 'integer' a;
 a := 4.5;
'end';
